change the routes and the models scripts
